# birthdays_app

./: .env  .flake8  .gitignore  README.md  alembic.ini  helper.sh  initial.sh  pyproject.toml
.github/workflows/: pylint.yml
alembic/: env.py
alembic/versions/: 5d896ea15718_initial.py  78ea7cbed282_add_data.py
app/: main.py
app/database/: connection.py  models.py
app/routers/: profile.py  reglog.py  subscriptions.py
app/utils/: authorization.py  config.py  responses.py
tests/: conftest.py  test_auth.py  test_profile.py  test_subscribe.py
