[tool.poetry]
name = "test-task-gasprom"
version = "0.1.0"
description = "Packages for application"
authors = ["agent-yandex <fox.online12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
